Drop support of compression, which is actually not implemented.

* configure.ac (use_zip, HAVE_ZIP): Remove.
* src/context.h (struct _ntbtls_transform_s): Remove fields for
compression support.
* src/protocol-cli.c (write_client_hello): Only support
TLS_COMPRESS_NULL.
* src/protocol.c (ssl_compress_buf, ssl_decompress_buf): Remove.
(_ntbtls_write_record): Drop TLS_COMPRESS_DEFLATE support.
(_ntbtls_read_record): Likewise.

--

GnuPG-bug-id: 4838
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>